part 2 problem  Section not sot showing correctly
Need help here please: my Section is not showing below the image it rather hidden behind image I have researched google but couldn’t find a solution to it

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ body {
 .content-container img {
   width: 100%;
   height: auto;
+  z-index: -1;
 }
 
 .content-container .btn {
@@ -85,4 +86,10 @@ body {
   border: none;
   cursor: pointer;
   border-radius: 5px;
+}
+.karma-title {
+  font-size: 20px;
+}
+.device {
+  width: 200px;
 }
